--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,9 @@ jobs:
       - name: Test with pytest
         run: |
           pytest --cov=gitaudit --cov-report term-missing --cov-fail-under=90 tests/
+      - name: Install Pylint
+        run: |
+          pip install pylint
+      - name: Analysing the code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
