--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,4 +43,4 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          pylint $(git ls-files '*.py')
+          pylint $(git ls-files '*.py') --ignore-patterns=test_*
